--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
     <!-- API -->
     <script src="asset/js/api.js"></script>
 
+    <!-- Javascript -->
+    <script src="asset/js/datacovid.js"></script>
+
     <!-- JS BOOTSTRAP -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -119,22 +122,5 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
-
-    <!-- Text in Case -->
-    <script>
-      var formulir = document.getElementById('formCovid')
-      var negara = document.getElementById('namanegara')
-      var input = document.getElementById('country')
-
-      formulir.addEventListener('submit', function (event) {
-
-        // agar form tidak benar benar mengirimkan data ke server dan merefresh halaman
-        event.preventDefault()
-
-        namanegara.innerText = country.value
-
-      })
-
-    </script>
   </body>
 </html>
